# database-builder-scepa

./: .env.sample  .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yaml  typecheck.yaml  unit_test.yaml
docs/: index.md
docs/contributing/: rules.md
docs/getting_started/: 00_getting_started.md  01_learn_the_basics.md  02_examples.md
docs/introduction/: 00_introduction.md  01_faq.md  02_repository.md
docs/main_modules/: 00_overview.md  01_abstract_source.md  01_connectors.md  02_storage.md  02_stores.md  03_sync.md  03_text_extract_utilities.md  04_zotero_source.md  05_typedb_v2_store.md  06_vector_stores.md  07_qdrant_store.md  08_chunking_strategy.md  09_abstract_chunk_embedder.md  10_chunk_embedder_openai.md  11_chunk_embedder_transformer.md  12_pdf_source.md
src/scepa_app/: main.py  schema.tql  settings.py
src/scepa_app/document_parsing/: extract_text_metadata.py  extract_text_metadata_zotero.py  text_metadata.py
src/scepa_app/document_parsing/embedding/: embed_chunks.py  openai_embedding_model.py
src/scepa_app/document_parsing/extraction/: extract_text_chunks.py  extract_text_metadata.py  extract_text_structure.py
src/scepa_app/graph/: graph_from_metadata.py
src/scepa_app/util/: metadata_util.py  node_util.py  partial_sync.py
tests/: test_main.py
tests/document_parsing/: test_extract_text_metadata.py  test_extract_text_metadata_zotero.py  test_text_metadata.py
tests/document_parsing/embedding/: test_embed_chunks.py  test_openai_embedding_model.py
tests/document_parsing/extraction/: test_extract_text_chunks.py  test_extract_text_metadata.py  test_extract_text_structure.py
tests/graph/: test_graph_from_metadata.py
tests/settings/: test_settings.py
tests/util/: test_metadata_util.py  test_node_util.py  test_partial_sync.py
